syntax = "proto3";

package api;

import "google/api/annotations.proto";

message RDSInstance {
    string id = 1;
    string region_id = 2;
    string endpoint_address = 3;
    uint32 endpoint_port = 4;
    string master_username = 5;
    string engine = 6;
    string engine_version = 7;
    uint32 monitoring_interval = 8;
}

message RDSDiscoverRequest {
    string aws_access_key_id = 1;
    string aws_secret_access_key = 2;
}

message RDSDiscoverResponse {
    repeated RDSInstance instances = 1;
}

service RDS {
    rpc Discover(RDSDiscoverRequest) returns (RDSDiscoverResponse) {
        option (google.api.http) = {
            get: "/v0/rds/discover"
        };
    }
}
